--- a/Blog/Views/Articles/Create.cshtml
+++ b/Blog/Views/Articles/Create.cshtml
@@ -3,12 +3,12 @@
     ViewData["Title"] = "Create Article";
 }
 
-<h1>Create Article</h1>
+<h1 style="color:#e7e9ea">Create Article</h1>
 
-<form asp-action="Create" method="post" style="padding: 30px; border-radius:40px; box-shadow: 11px 9px 36px 2px rgba(0,0,0,0.69);">
+<form asp-action="Create" method="post" style="padding: 30px; ">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Title" class="control-label"></label>
+        <label asp-for="Title" class="control-label" style="color:#e7e9ea"></label>
         <input asp-for="Title" class="form-control" />
         <span asp-validation-for="Title" class="text-danger"></span>
     </div>
@@ -23,7 +23,7 @@
         <span asp-validation-for="AuthorEmail" class="text-danger"></span>
     </div> *@
     <div class="form-group" style="margin-bottom:20px;">
-        <label asp-for="Content" class="control-label"></label>
+        <label asp-for="Content" class="control-label" style="color:#e7e9ea"></label>
         <textarea asp-for="Content" class="form-control"></textarea>
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
