--- a/Blog/Views/Articles/Update.cshtml
+++ b/Blog/Views/Articles/Update.cshtml
@@ -3,10 +3,12 @@
     ViewData["Title"] = "Create Article";
 }
 
-<h1 style="color:#e7e9ea">Create Article</h1>
+<h1 style="color:#e7e9ea">Update Article</h1>
 
-<form asp-action="Create" method="post" style="padding: 30px; ">
+<form asp-action="Update" method="post" style="padding: 30px; ">
+    <input type="hidden" asp-for="Id" />
     <div asp-validation-summary="All" class="text-danger"></div>
+
     <div class="form-group">
         <label asp-for="Title" class="control-label" style="color:#e7e9ea"></label>
         <input asp-for="Title" class="form-control" />
@@ -18,6 +20,6 @@
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
-	</div>
+        <input type="submit" value="Update" class="btn btn-primary" />
+    </div>
 </form>
