logica para que no se pueda editar mas alla de los 5 min

--- a/Blog/Views/Articles/Details.cshtml
+++ b/Blog/Views/Articles/Details.cshtml
@@ -14,7 +14,7 @@
 	<div style="margin-bottom:10px;">
 		<div style="display:flex;">
 			<div style="font-size:12px; color:#e7e9ea;">@Model.Article.AuthorName</div>
-			@if (Model.Article.AuthorName == User.Identity.Name)
+			@if (Model.Article.AuthorName == User.Identity.Name || DateTime.Now > Model.Article.PublishedDate.AddMinutes(5))
 			{
 				<a asp-controller="Articles" asp-action="Update" asp-route-id="@Model.Article.Id" class="btn btn-sm ms-2" style="background-color:#1d9bf0; color:#e7e9ea; border-radius:20px; font-size:12px; padding:2px 10px;">Edit</a>
 			}
@@ -25,7 +25,10 @@
 
 		<span style="font-size:12px; color:#e7e9ea;">@Model.Article.AuthorEmail</span>
 		<span style="font-size:12px; color:#e7e9ea;">@Model.Article.PublishedDate</span>
-		<div class=" text-end" style="font-size:12px; color:#e7e9ea;">Edited</div>
+		@if(Model.Article.edit == true)
+		{
+			<div class=" text-end" style="font-size:12px; color:#e7e9ea;">Edited</div>
+		}
 	</div>
 	<hr style="background-color:#e7e9ea">
 	<div>
